syntax = "proto3";

package slave;

service SlaveService {
  rpc UploadBlock(stream UploadBlockRequest) returns (UploadBlockResponse) {}
}

message UploadBlockRequest {
  oneof content {
    BlockMetadata metadata = 1;
    DataChunk chunk = 2;
  }
}


message BlockMetadata {
  bytes block_id = 1;
}

message DataChunk {
  bytes data = 1;
  // SHA2-256 checksum of the data
  bytes checksum = 2;
}

message UploadBlockResponse {
  bytes block_id = 1;
  uint64 size = 2; 
}
